...
    "product_list" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Product List"
          }
        },
        "es-419" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Listado de productos"
...
    "search_on_mercado_libre" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Search on Mercado Libre"
          }
        },
        "es-419" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Buscar en Mercado Libre"
...
